--- a/index.html
+++ b/index.html
@@ -90,37 +90,35 @@
     <div class="nuestrosServicios1">
       <h2 id="nuestrosServicios2"><strong>Nuestros servicios</strong></h2>
     </div>
-    <div class="d-flex">
+    <div class="d-flex" style="justify-content: space-around;">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/graph.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">
+            <img src="images/graph.png" alt="Avatar" style="width:120px;height:120px; margin-top: 20px;">
           </div>
           <div class="flip-card-back">
-            <h1><strong>Estrategia y Gestión</strong></h1> 
-            <a href="servicios.html"><p>Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para   redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que   puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p></a>  
+            <a href="servicios.html#seccionEstrategia" style="text-decoration: none;"> <h1><strong>Estrategia <br>y<br> Gestión</strong></h1></a>            
           </div>  
         </div>  
       </div>  
       <div class="flip-card"> 
         <div class="flip-card-inner"> 
           <div class="flip-card-front "> 
-              <img src="images/training.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">  
+              <img src="images/training.png" alt="Avatar" style="width:120px;height:120px; margin-top: 20px;">  
           </div>  
           <div class="flip-card-back">  
-              <h1><strong>Eventos y Capacitaciones</strong></h1>  
-              <a href="servicios.html"><p>Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus   públicos objetivos para que puedan incorporar la su stentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p></a>   
+              <a href="servicios.html#seccionCapacitaciones" style="text-decoration: none;"> <h1><strong>Eventos <br>y<br> Capacitaciones</strong></h1></a>                  
           </div>  
         </div>
       </div>
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/shout.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">
+            <img src="images/shout.png" alt="Avatar" style="width:120px;height:120px; margin-top: 20px;">
           </div>
           <div class="flip-card-back">
-            <h1><strong>Comunicación de Impacto</strong></h1> 
-            <a href="servicios.html"><p>Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen  profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p></a>  
+           <a href="servicios.html#seccionComunicacion" style="text-decoration: none;"><h1><strong>Comunicación <br>de<br> Impacto</strong></h1></a>  
+            
           </div>  
         </div>
       </div>
