--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="nuestrosServicios1">
       <h2 id="nuestrosServicios2"><strong>Nuestros servicios</strong></h2>
     </div>
-    <div class="d-flex" style="justify-content: space-around;">
+    <div class="servicios-cards">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
