--- a/nosotros.html
+++ b/nosotros.html
@@ -71,18 +71,69 @@
     </div>
     <div class="grid-nosotros">
     	<div id="nosotros-izquierda">
-    		<h2>Juan Manuel Chaname Ciuró Roqué</h2>
+        <h2>Juan Manuel Chaname Ciuró Roqué</h2>
+    		<h3 class="text-muted">Fundador y Director</h3> 
+        <!-- Button trigger modal -->
+        <button type="button" data-toggle="modal" data-target="#exampleModal" style="border-style: none; background-color: transparent;">
+          <img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>Es Project Manager, especialista en gestión y dirección de proyectos integrales, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Posteriormente funda 3R IDEAS. Hoy trabaja en la alfabetización del cuidado al medioambiente con un mix de tecnología, creatividad e innovación como pilares. Es Director de Planificación y Proyectos de Green Drinks Buenos Aires y se desempeña como Mentor para emprendimientos de impacto social, ambiental y económico.</p>
+              </div>
+              <div class="modal-footer">
+              </div>
+            </div>
+          </div>
+        </div>
+    		<!--<h2>Juan Manuel Chaname Ciuró Roqué</h2>
     		  <h3 class="text-muted">Fundador y Director</h3> 		  	
     		<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
-    		<p>Es Project Manager, especialista en gestión y dirección de proyectos integrales, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Posteriormente funda 3R IDEAS. Hoy trabaja en la alfabetización del cuidado al medioambiente con un mix de tecnología, creatividad e innovación como pilares. Es Director de Planificación y Proyectos de Green Drinks Buenos Aires y se desempeña como Mentor para emprendimientos de impacto social, ambiental y económico.</p>  
+    		<p>Es Project Manager, especialista en gestión y dirección de proyectos integrales, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Posteriormente funda 3R IDEAS. Hoy trabaja en la alfabetización del cuidado al medioambiente con un mix de tecnología, creatividad e innovación como pilares. Es Director de Planificación y Proyectos de Green Drinks Buenos Aires y se desempeña como Mentor para emprendimientos de impacto social, ambiental y económico.</p>-->  
     	</div>
       <div id="nosotros-derecha">
     		<h2>Vanina Estrugo
 				  <h3 class="text-muted">Directora Ejecutiva</h3>
-			   </h2>	  		
-    	   <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
-    		<p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
-    	</div>   
+         </h2>
+         <!-- Button trigger modal -->
+          <button type="button" class="btn" data-toggle="modal" data-target="#exampleModal" style="border-style: none; background-color: transparent;">
+            <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
+                </div>
+                <div class="modal-footer">
+                </div>
+              </div>
+            </div>
+          </div>	  		
+          <!--
+          <h2>Vanina Estrugo
+            <h3 class="text-muted">Directora Ejecutiva</h3>
+          </h2>
+          <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
+    		  <p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
+    	</div>-->   
     </div>   	
 	</section>
 	<footer>
